refactor: simplify imports and use `toList` for stream conversions
- Replaced explicit imports with wildcard in `UnbluCamelAdapter`.
- Updated `UnbluService` to use `toList` instead of `collect(Collectors.toList)` for better readability.